FreedomSanboxAntDeploy/src/objects/Product_Premium__c.object
<CustomObject>
    <fields>
        <fullName>Child__c</fullName>
        <label>Child</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Age__c</fullName>
        <label>End Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Payment_Term__c</fullName>
        <label>Policy Payment Term (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Product Premium</relationshipLabel>
        <relationshipName>Product_Premium</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <label>Spouse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Age__c</fullName>
        <label>Start Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Assured__c</fullName>
        <label>Sum Assured</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Premium</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Product Premium Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Premium</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>